# pyBedrockLlamaindex-202403

./: .gitignore  main.py  mainpersist.py  pyproject.toml
